welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:23: error: unclosed character literal
			avance()'     
                                ^BDRBuggle:24: error: illegal start of simple expression
		}else if (litMessage()='Z'){
                      ^